--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <tomcat.version>8.0.18</tomcat.version>
         <mysql.version>5.1.34</mysql.version>
         <spring-loaded.version>1.2.1.RELEASE</spring-loaded.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <packaging>war</packaging>
