--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>2.1.3</version>
         </dependency>
         <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>handlebars</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.3.2</version>
