Create Group of Groups fully functional Display child group samples in group overview Small refactoring to reuse code (BaseEntity) (semi-)Generified createGroup jquery plugin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=8080
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Other properties to set on the JPA connection, if desired (see Spring Boot Reference guide (Appendix-A)
