--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
                     <dependency>
                         <groupId>org.springframework</groupId>
                         <artifactId>springloaded</artifactId>
-                        <version>1.2.1.RELEASE</version>
+                        <version>${spring-loaded.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
