Order Work: moved lots of logic to Java and Thymeleaf instead of JS+Handlerbars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,6 @@ spring.datasource.continueOnError=false
 
 # thymeleaf
 spring.thymeleaf.cache = false
+
+# json
+spring.jackson.serialization.indent_output = true
