Clean up, some refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,12 @@ db.name=aker
 # Tomcat server
 server.port=8080
 
+#debug=true
+#trace=true
+
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # Other properties to set on the JPA connection, if desired (see Spring Boot Reference guide (Appendix-A)
