Fix bug where one cannot create a group of samples

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ spring.datasource.continueOnError=false
 # spring.datasource.separator=;# statement separator in SQL initialization scripts
 
 # thymeleaf
-spring.thymeleaf.cache = false
+#spring.thymeleaf.cache = false
 
 # json
 spring.jackson.serialization.indent_output = true
