Group refactoring and first tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,7 +7,9 @@ server.port=8080
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.HSQLDialect
 
 
 # Other properties to set on the JPA connection, if desired (see Spring Boot Reference guide (Appendix-A)
@@ -22,12 +24,15 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # DataSourceAutoConfiguration
 spring.datasource.name=store
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/${db.name}
-spring.datasource.username=${db.username}
-spring.datasource.password=${db.password}
-spring.datasource.validation-query=select 1
-spring.datasource.connection-test-query=select 1
+spring.datasource.url=jdbc:hsqldb:mem:testdb
+spring.datasource.schema=
+spring.datasource.username=a
+spring.datasource.password=
+spring.datasource.max-active=100
+spring.datasource.max-idle=8
+spring.datasource.min-idle=8
+spring.datasource.initial-size=10
+spring.datasource.validation-query=SELECT 1 FROM INFORMATION_SCHEMA.SYSTEM_USERS
 spring.datasource.test-on-borrow=true
 
 # Advanced configuration...
@@ -40,7 +45,7 @@ spring.datasource.continueOnError=false
 # spring.datasource.separator=;# statement separator in SQL initialization scripts
 
 # thymeleaf
-spring.thymeleaf.cache = false
+#spring.thymeleaf.cache = false
 
 # json
 spring.jackson.serialization.indent_output = true
